<resources>
    <string name="app_name">情クラ！</string>
    <string name="MainHeader">サーバ稼働状況</string>

    <string name="altMainHeader">HEADER</string>
    <string name="altMainReload">RELOAD</string>
    <string name="altMainBackground">BACKGROUND</string>
    <string name="altMainBox">BOX</string>
    <string name="altMainWorking">WORKING</string>

    <string name="defMainState">取得できませんでした</string>
    <string name="defMainAddress">- - - - - - - - - - - - - -</string>
    <string name="MainLabelAddress">サーバアドレス</string>
    <string name="defMainMember">- / -</string>
    <string name="MainLabelMember">メンバー</string>
    <string name="defMainVersion">- - - - -</string>
    <string name="MainLabelVersion">バージョン</string>
    <string name="defMainRcon">- - - - -</string>
    <string name="MainLabelRcon">RCON</string>

    <string name="altRestartHdBackground">HEADER_BACKGROUND</string>
    <string name="altRestartHdBack">HEADER_BACK</string>
    <string name="altRestartHdReload">HEADER_RELOAD</string>
    <string name="altRestartBodyBackground">BODY_BACKGROUND</string>
    <string name="altRestartHdPossible">HEADER_POSSIBLE</string>
    <string name="altRestartNoteBackground">NOTE_BACKGROUND</string>
    <string name="altRestartBtnRestart">BUTTON_RESTART</string>
    <string name="altRestartBtm">BOTTOM</string>

    <string name="defRestartHdTitle">サーバ再起動</string>
    <string name="defRestartHdTimeText">所要時間 80s</string>
    <string name="defRestartHdPossibleText">実行できません</string>
    <string name="defRestartNoteTtl">考えられる原因</string>
    <string name="defRestartNoteText1">・サーバが起動していない，又はアクセスできない</string>
    <string name="defRestartNoteText2">・他のユーザが現在サーバ処理を行っている</string>

    <string name="defBackupHdTitle">バックアップ</string>
    <string name="defBackupHdTimeText">所要時間 90s</string>
    <string name="defBackupHdPossibleText">実行できません</string>
    <string name="defBackupNoteTtl">考えられる原因</string>
    <string name="defBackupNoteText1">・サーバが起動していない，又はアクセスできない</string>
    <string name="defBackupNoteText2">・他のユーザが現在サーバ処理を行っている</string>

</resources>
