<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:paddingTop="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/altMainHeader" />

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/MainHeader"
        android:textAlignment="center"
        android:textColor="@color/header"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/header" />

    <ImageButton
        android:id="@+id/reload"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/altMainReload"
        android:scaleType="fitXY"
        android:src="@drawable/reload"
        app:layout_constraintEnd_toEndOf="@+id/header"
        app:layout_constraintTop_toTopOf="@id/header" />

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:scaleType="fitXY"
        android:src="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/altMainBackground"/>

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="37dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" >

        <ImageView
            android:id="@+id/box1"
            android:layout_alignParentTop="true"
            android:layout_width="330dp"
            android:layout_height="268dp"
            android:scaleType="fitXY"
            android:src="@drawable/box1"
            android:contentDescription="@string/altMainBox"/>

        <ImageView
            android:id="@+id/workingImageView"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_width="330dp"
            android:layout_height="176dp"
            android:layout_marginTop="36dp"
            android:scaleType="fitXY"
            android:src="@drawable/notworking"
            android:contentDescription="@string/altMainWorking"/>

        <TextView
            android:id="@+id/state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/workingImageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="7.8dp"
            android:textColor="@color/font"
            android:textSize="23sp"
            android:textStyle="bold"
            android:text="@string/defMainState"
            android:textAlignment="center" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/horizontal1"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relative1" >

        <RelativeLayout
            android:id="@+id/relative2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header" >

            <ImageView
                android:id="@+id/box2"
                android:layout_width="217dp"
                android:layout_height="104dp"
                android:scaleType="fitXY"
                android:src="@drawable/box2"
                android:contentDescription="@string/altMainBox"/>

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="43dp"
                android:textColor="@color/font"
                android:textSize="19sp"
                android:textStyle="bold"
                android:text="@string/defMainAddress"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7.8dp"
                android:textColor="@color/font"
                android:textSize="12sp"
                android:text="@string/MainLabelAddress"
                android:textAlignment="center" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header" >

            <ImageView
                android:id="@+id/box3"
                android:layout_width="105dp"
                android:layout_height="104dp"
                android:scaleType="fitXY"
                android:layout_marginStart="8dp"
                android:src="@drawable/box3"
                android:contentDescription="@string/altMainBox"/>

            <TextView
                android:id="@+id/member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="43dp"
                android:textColor="@color/font"
                android:textSize="19sp"
                android:textStyle="bold"
                android:text="@string/defMainMember"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/member"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7.8dp"
                android:textColor="@color/font"
                android:textSize="12sp"
                android:text="@string/MainLabelMember"
                android:textAlignment="center" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal1"
        >

        <RelativeLayout
            android:id="@+id/relative4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header" >

            <ImageView
                android:id="@+id/box4"
                android:layout_width="105dp"
                android:layout_height="104dp"
                android:scaleType="fitXY"
                android:src="@drawable/box3"
                android:contentDescription="@string/altMainBox"/>

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="43dp"
                android:textColor="@color/font"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/defMainVersion"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/version"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7.8dp"
                android:textColor="@color/font"
                android:textSize="12sp"
                android:text="@string/MainLabelVersion"
                android:textAlignment="center" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header" >

            <ImageView
                android:id="@+id/box5"
                android:layout_width="105dp"
                android:layout_height="104dp"
                android:scaleType="fitXY"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="112dp"
                android:src="@drawable/box3"
                android:contentDescription="@string/altMainBox"/>

            <TextView
                android:id="@+id/rcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/box5"
                android:layout_alignEnd="@+id/box5"
                android:layout_marginStart="22dp"
                android:layout_marginTop="43dp"
                android:layout_marginEnd="22dp"
                android:text="@string/defMainRcon"
                android:textAlignment="center"
                android:textColor="@color/font"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/box5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rcon"
                android:layout_alignStart="@+id/box5"
                android:layout_alignEnd="@+id/box5"
                android:layout_marginStart="35dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="35dp"
                android:text="@string/MainLabelRcon"
                android:textAlignment="center"
                android:textColor="@color/font"
                android:textSize="12sp" />

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>