<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".TopActivity">

    <ImageView
        android:id="@+id/hd_background"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/hd_background"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/altRestartHdBackground" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/altRestartHdBackground"
        android:scaleType="fitXY"
        android:src="@drawable/icon"
        app:layout_constraintEnd_toStartOf="@id/hd_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hd_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="情クラ！"
        android:textAlignment="center"
        android:textColor="@color/header"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/hd_reload"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="30dp"
        android:scaleType="centerCrop"
        android:src="@drawable/hd_reload"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/altRestartHdReload" />

    <LinearLayout
        android:id="@+id/horizontal1"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:layout_marginStart="40dp"
        android:layout_alignParentTop="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <TextView
            android:id="@+id/hd_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"
            android:textAlignment="center"
            android:textColor="@color/header"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.274"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hd_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="人がオンライン"
            android:textAlignment="center"
            android:textColor="@color/header"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.689"
            app:layout_constraintStart_toEndOf="@+id/hd_text1"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/pickel"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="22dp"
            android:contentDescription="@string/altRestartHdReload"
            android:scaleType="fitXY"
            android:src="@drawable/pickel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/horizontal2"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_alignParentTop="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <ImageView
            android:id="@+id/face1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/altRestartHdReload"
            android:scaleType="fitXY"
            android:src="@drawable/face_failure"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/face1_gray"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="-20dp"
            android:contentDescription="@string/altRestartHdReload"
            android:scaleType="fitXY"
            android:src="@drawable/face_gray"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/face2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="13dp"
            android:contentDescription="@string/altRestartHdReload"
            android:scaleType="fitXY"
            android:src="@drawable/face_failure"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/face2_gray"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="-20dp"
            android:contentDescription="@string/altRestartHdReload"
            android:scaleType="fitXY"
            android:src="@drawable/face_gray"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/face3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="13dp"
            android:contentDescription="@string/altRestartHdReload"
            android:scaleType="fitXY"
            android:src="@drawable/face_failure"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/face3_gray"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="-20dp"
            android:contentDescription="@string/altRestartHdReload"
            android:scaleType="fitXY"
            android:src="@drawable/face_gray"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/face4"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="13dp"
            android:contentDescription="@string/altRestartHdReload"
            android:scaleType="fitXY"
            android:src="@drawable/face_failure"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/face4_gray"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="-20dp"
            android:contentDescription="@string/altRestartHdReload"
            android:scaleType="fitXY"
            android:src="@drawable/face_gray"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/face5"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="13dp"
            android:contentDescription="@string/altRestartHdReload"
            android:scaleType="fitXY"
            android:src="@drawable/face_failure"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/face5_gray"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="-20dp"
            android:contentDescription="@string/altRestartHdReload"
            android:scaleType="fitXY"
            android:src="@drawable/face_gray"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/horizontal3"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:layout_alignParentTop="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <ImageView
            android:id="@+id/face6"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/altRestartHdReload"
            android:scaleType="fitXY"
            android:src="@drawable/face_failure"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/face6_gray"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="-20dp"
            android:contentDescription="@string/altRestartHdReload"
            android:scaleType="fitXY"
            android:src="@drawable/face_gray"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/face7"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="13dp"
            android:contentDescription="@string/altRestartHdReload"
            android:scaleType="fitXY"
            android:src="@drawable/face_failure"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/face7_gray"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="-20dp"
            android:contentDescription="@string/altRestartHdReload"
            android:scaleType="fitXY"
            android:src="@drawable/face_gray"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/face8"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="13dp"
            android:contentDescription="@string/altRestartHdReload"
            android:scaleType="fitXY"
            android:src="@drawable/face_failure"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/face8_gray"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="-20dp"
            android:contentDescription="@string/altRestartHdReload"
            android:scaleType="fitXY"
            android:src="@drawable/face_gray"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/face9"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="13dp"
            android:contentDescription="@string/altRestartHdReload"
            android:scaleType="fitXY"
            android:src="@drawable/face_failure"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/face9_gray"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="-20dp"
            android:contentDescription="@string/altRestartHdReload"
            android:scaleType="fitXY"
            android:src="@drawable/face_gray"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/face10"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="13dp"
            android:contentDescription="@string/altRestartHdReload"
            android:scaleType="fitXY"
            android:src="@drawable/face_failure"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/face10_gray"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="-20dp"
            android:contentDescription="@string/altRestartHdReload"
            android:scaleType="fitXY"
            android:src="@drawable/face_gray"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <ImageView
        android:id="@+id/top_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="290dp"
        android:scaleType="fitXY"
        android:src="@drawable/top_background"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/altRestartHdReload" />

    <LinearLayout
        android:id="@+id/horizontal4"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:layout_alignParentTop="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <ImageView
            android:id="@+id/btn_backup"
            android:layout_width="166dp"
            android:layout_height="176dp"
            android:contentDescription="@string/altRestartHdReload"
            android:scaleType="fitXY"
            android:src="@drawable/btn_backup"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_restart"
            android:layout_width="166dp"
            android:layout_height="176dp"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/altRestartHdReload"
            android:scaleType="fitXY"
            android:src="@drawable/btn_restart"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <TextView
        android:id="@+id/top_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="サーバの稼働状態: 正常"
        android:textAlignment="center"
        android:textColor="@color/font"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/top_text2"
        app:layout_constraintTop_toBottomOf="@id/horizontal4" />

    <TextView
        android:id="@+id/top_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="最終バックアップ: 2020/5/5 22:35"
        android:textAlignment="center"
        android:textColor="@color/font"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_text1" />

    <ImageView
        android:id="@+id/btm"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:scaleType="fitXY"
        android:src="@drawable/btm"
        android:contentDescription="@string/altRestartBtm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>